unpackaged/main/default/objects/AdviceTypeStatus__c/AdviceTypeStatus__c.object-meta.xml
<CustomObject>
    <description>A child of advice type, this retains information about how advice should be controlled at each status.</description>
    <label>Advice Type Status</label>
    <nameField>
        <label>Advice Type Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advice Type Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>