unpackaged/main/default/objects/AdviceTypeStatus__c/fields/NextStatus__c.field-meta.xml
<CustomField>
    <fullName>NextStatus__c</fullName>
    <label>Next Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AdviceStatus</valueSetName>
    </valueSet>
</CustomField>