unpackaged/main/default/objects/AdviceTypeStatus__c/fields/TaskInitial__c.field-meta.xml
<CustomField>
    <fullName>TaskInitial__c</fullName>
    <description>The task that should be created whenever moved to this status.</description>
    <inlineHelpText>This task will be created whenever this status is moved to.</inlineHelpText>
    <label>Task | Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>