unpackaged/main/default/objects/AdviceTypeStatus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AdviceType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>